--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ Error message and password prompt
 
 <li>$:/GitHub/Username</li>
 
+<li>$:/Import</li>
+
 <li>$:/Import!!popup-Coronavirus Vaccine</li>
 
 <li>$:/Import!!popup-Coronavirus Vaccine.html</li>
@@ -194,6 +196,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla</li>
 
 <li>hello</li>
+
+<li>Home</li>
 
 <li>new note</li>
 
@@ -9613,6 +9617,16 @@ Error message and password prompt
 <div created="20200723095309332" modified="20200723095310034" title="$:/GitHub/Username">
 <pre>ajshopov</pre>
 </div>
+<div plugin-type="import" status="pending" title="$:/Import" type="application/json">
+<pre>{
+    &quot;tiddlers&quot;: {
+        &quot;Untitled&quot;: {
+            &quot;title&quot;: &quot;Untitled&quot;,
+            &quot;text&quot;: &quot;&lt;&lt;list-links \&quot;[tag[recipe]]\&quot;&gt;&gt;&quot;
+        }
+    }
+}</pre>
+</div>
 <div created="20200723113935952" modified="20200723113935952" title="$:/Import!!popup-Coronavirus Vaccine">
 <pre>yes</pre>
 </div>
@@ -9643,13 +9657,13 @@ Error message and password prompt
 <div created="20200723114511720" modified="20200723115657275" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200723113655040" modified="20200724234214790" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200723113655040" modified="20200725033149117" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200724234351611" list="[[The Strength of Conformism]] [[New Vaccine History]] Recipes" modified="20200724234351611" title="$:/StoryList">
+<div created="20200725000014824" list="Home [[The Strength of Conformism]] [[New Vaccine History]] Recipes" modified="20200725000014824" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9830,6 +9844,10 @@ Error message and password prompt
 </div>
 <div created="20200723121158006" modified="20200723121202920" tags="" title="hello">
 <pre>hi there</pre>
+</div>
+<div created="20200725033150935" modified="20200725033235094" tags="" title="Home">
+<pre>Links to go here:
+&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
