--- a/index.html
+++ b/index.html
@@ -171,9 +171,13 @@ Error message and password prompt
 
 <li>$:/state/tab-1163638994</li>
 
+<li>$:/state/tab-1335562222</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab-370012239</li>
 
 <li>$:/state/tab/moresidebar-1850697562</li>
 
@@ -9648,22 +9652,28 @@ Error message and password prompt
 <div created="20200723114512767" modified="20200723114513734" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
+<div created="20200725033557403" modified="20200725033603729" title="$:/state/tab-1335562222">
+<pre>$:/core/ui/TiddlerInfo/Advanced</pre>
+</div>
 <div created="20200723095304272" modified="20200723121502105" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200723095306405" modified="20200723121422935" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
-<div created="20200723114511720" modified="20200723115657275" title="$:/state/tab/moresidebar-1850697562">
+<div created="20200725033610982" modified="20200725033627148" title="$:/state/tab-370012239">
+<pre>$:/core/ui/TiddlerInfo/References</pre>
+</div>
+<div created="20200723114511720" modified="20200725034355161" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200723113655040" modified="20200725033149117" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20200723113655040" modified="20200725034453119" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200725000014824" list="Home [[The Strength of Conformism]] [[New Vaccine History]] Recipes" modified="20200725000014824" title="$:/StoryList">
+<div created="20200725000014824" list="Home Recipes" modified="20200725034043816" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9730,7 +9740,7 @@ Error message and password prompt
 <div created="20200723115238278" modified="20200723115529580" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
-<div created="20200723115307577" modified="20200723115314376" title="$:/temp/search">
+<div created="20200723115307577" modified="20200725033729687" title="$:/temp/search">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -9845,9 +9855,12 @@ Error message and password prompt
 <div created="20200723121158006" modified="20200723121202920" tags="" title="hello">
 <pre>hi there</pre>
 </div>
-<div created="20200725033150935" modified="20200725033235094" tags="" title="Home">
+<div created="20200725033150935" modified="20200725034756502" tags="" title="Home">
 <pre>Links to go here:
-&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;
+
+All Links
+&lt;&lt;list-links &quot; [!is[system]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
@@ -9859,7 +9872,7 @@ Merck CEO Ken Frazier
 
 https://www.youtube.com/watch?v=KJMekwILAJo</pre>
 </div>
-<div created="20200723115535321" modified="20200723115631421" tags="" title="Recipes">
+<div created="20200723115535321" modified="20200725034743811" tags="" title="Recipes">
 <pre>&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20200723114952332" modified="20200723115014722" tags="" title="Sturgeon's law">
